@@ -19,15 +19,15 @@
           category="user" visible="True">
    <permission>View</permission>
   </action>
- </action-provider>
- <action-provider id="portal_actions">
-  <action action_id="action_my_preferences"
+  <action action_id="preferences"
           title="action_my_preferences"
           condition_expr="member"
           url_expr="string:${portal_url}/cpsdirectory_entry_view?dirname=members&amp;id=${member}"
           category="user" visible="True">
    <permission>View</permission>
   </action>
+ </action-provider>
+ <action-provider id="portal_actions">
   <action action_id="accessibility"
           title="action_accessibility" condition_expr=""
           url_expr="string:${portal_url}/accessibility"
