@@ -39,4 +39,5 @@ New internal features:
 - the "Edit this text" link on the welcome message goes to the portlet editor.
 - added a temporary "folder contents" portlet in the main part of the screen
   until there is a more extended view for it (cf. #573)
-
+- The "My preferences" action has now the standard CMF 'preferences' id and
+  depends on membership tool like in CMF.
